# 2022-10-24

./: .gitignore  CMakeLists.txt  Dockerfile  README.rst
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml
exercises/: CMakeLists.txt  simple.cpp  threads.cpp
livehacking/: CMakeLists.txt  arithmetic.cpp  interfaces.cpp
singleton/: CMakeLists.txt  hello.cpp  singleton-social-insurance-flexible-main.cpp  singleton-social-insurance-inflexible-main.cpp  social-insurance-oegk.h  social-insurance.cpp  social-insurance.h
tests/: CMakeLists.txt  adapter-suite.cpp  command-suite.cpp  composite-suite-basic.cpp  decorator.py  factory-suite.cpp  heizung.cpp  interpreter-suite.cpp  sensor-i2c-abstract.cpp  sensor-i2c-nonabstract.cpp  sensor-shared-ptr.cpp  sensor-unique-ptr.cpp  vector-initializer-list.cpp  visitor.cpp
